--- a/styles/style.css
+++ b/styles/style.css
@@ -66,3 +66,66 @@ body{
     background-color: grey;
     color: black;
 }
+
+/* viewModal */
+
+
+.model-view-top
+{
+    display: flex;
+    justify-content: space-around;
+}
+.model-view-top-img
+{
+    flex-basis: 40%;
+    background-color: red;
+    height: 300px;
+}
+.model-view-desc
+{
+    flex-basis: 60%;
+    background-color: yellow;
+}
+.model-view-bottom
+{
+    height: 100px;
+    background-color: green;
+}
+.modal-view-list
+{
+    margin: 0px;
+}
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1;
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+  }
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  .close {
+    color: #aaaaaa;
+    /* float: right; */
+    font-size: 28px;
+    font-weight: bold;
+   
+  }
+  .close-div
+  {
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+  }
+  
