--- a/styles/style.css
+++ b/styles/style.css
@@ -75,3 +75,39 @@ body {
     background-color: grey;
     color: black;
 }
+
+.compare-container {
+    display: flex;
+    position: fixed;
+    flex-direction: row;
+    justify-content: space-between;
+    background: lightgrey;
+    /* box-shadow: 0 0  5px 5px black; */
+    border: 1px solid black;
+    bottom: 0px;
+    width: 100%;
+    height: 100px;
+    margin:  0 auto;
+    box-sizing: border-box;
+}
+.compare-mobile-1 h3,.compare-mobile-2 h3{
+    text-align: center;
+    padding: 10px;
+}
+
+.compare-mobile-1,.compare-mobile-2{
+    display: flex;
+    flex-direction: row; 
+    width: 40%;
+}
+.compare-now-button {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+#mobile-remove-btn-one,#mobile-remove-btn-one{
+    height: 20px;
+    justify-content: flex-end;
+}
+
+
