--- a/styles/style.css
+++ b/styles/style.css
@@ -110,4 +110,35 @@ body {
     justify-content: flex-end;
 }
 
+#modal {
+    display: none;
+    z-index: 1;
+    /* height: 1000px;
+    width: 1000px; */
+    /* border: 2px solid red; */
+    background-color: rgb(0,0,0);/*  Fallback color */
+    background-color: rgba(0,0,0,0.4);
+    width: 100%;
+    height: 100%;
+    position: fixed; /* Stay in place */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  overflow: auto; 
+  /* margin: 0 auto; */
+}
+.modal-content
+{
+    background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
 
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
