--- a/styles/style.css
+++ b/styles/style.css
@@ -87,25 +87,34 @@ body {
     bottom: 0px;
     width: 100%;
     height: 100px;
-    margin:  0 auto;
+    margin: 0 auto;
     box-sizing: border-box;
 }
-.compare-mobile-1 h3,.compare-mobile-2 h3{
+
+.compare-mobile-1 h3, .compare-mobile-2 h3 {
     text-align: center;
     padding: 10px;
 }
 
-.compare-mobile-1,.compare-mobile-2{
+.compare-mobile-1, .compare-mobile-2 {
     display: flex;
-    flex-direction: row; 
+    flex-direction: row;
+    /* justify-content: space-around; */
     width: 40%;
+    padding: 10px;
 }
+.compare-mobile-1{
+    border-right: 1px solid black;
+}
+   
+
 .compare-now-button {
     display: flex;
     justify-content: center;
     align-content: center;
 }
-#mobile-remove-btn-one,#mobile-remove-btn-one{
+
+#mobile-remove-btn-one, #mobile-remove-btn-one {
     height: 20px;
     justify-content: flex-end;
 }
@@ -113,27 +122,26 @@ body {
 #modal {
     display: none;
     z-index: 1;
-    /* height: 1000px;
-    width: 1000px; */
-    /* border: 2px solid red; */
-    background-color: rgb(0,0,0);/*  Fallback color */
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgb(0, 0, 0);
+    /*  Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
     width: 100%;
     height: 100%;
-    position: fixed; /* Stay in place */
-  padding-top: 100px; /* Location of the box */
-  top: 0;
-  left: 0;
-  overflow: auto; 
-  /* margin: 0 auto; */
+    position: fixed;
+    /* Stay in place */
+    padding-top: 100px;
+    /* Location of the box */
+    top: 0;
+    left: 0;
+    overflow: auto;
 }
-.modal-content
-{
+
+.modal-content {
     background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
 }
 
 .close {
@@ -141,4 +149,26 @@ body {
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
+}
+.close:hover{
+    cursor: pointer;
+    color: black;
+}
+
+#mobileRemoveBtnOne,#mobileRemoveBtnTwo{
+    display: none;
+    height: 20px;
+}
+.comparation-table td{
+    padding: 10px;
+}
+
+.comparation-table{
+    clear: both;
+    box-shadow: 0 0 5px 5px lightsteelblue;
+}
+
+
+.table-template{
+    display: none;
+}
