--- a/features/viewModel/CSS/model.css
+++ b/features/viewModel/CSS/model.css
@@ -76,14 +76,14 @@
     background-color: rgb(0,0,0); 
     background-color: rgba(0,0,0,0.4); 
   }
-  .modal-content {
+  .view-modal-content {
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
   }
-  .close {
+  .view-close {
     color: #aaaaaa;
     float: right;
     font-size: 28px;
